@@ -34,7 +34,7 @@ class SearchHelper
                 ]);
             })->paginate($limitPerPage);
         } else {
-            $results = Contact::search($needle, $accountId, $limitPerPage, $order);
+            $results = Contact::search($needle, $accountId, $limitPerPage, $order, 'and is_partial=0');
         }
 
         return $results;
